# Gitlab-Reviewer

./: .gitlab-ci.yml  README.md  docker-compose.yml  package-lock.json
back/: .env.template  .gitignore  Dockerfile  README.md  mock_openai_run.py  pyproject.toml  requirements.txt  run.py  test_run.py
back/app/: __init__.py  main.py
back/app/api/: analysis.py  auth.py  commits.py  merge_requests.py  notifications.py  repositories.py
back/app/core/: auth.py  config.py  repositories.py
back/app/db/: __init__.py  analysis.py  auth.py  commits.py  merge_requests.py  notifications.py  repositories.py
back/app/errors/: __init__.py  analysis.py  auth.py  commits.py  notifications.py  repositories.py  review.py
back/app/interface/: __init__.py  analysis.py  auth.py  repositories.py
back/app/model/: __init__.py  commit_review_bindings.py  commit_reviews.py  mr_reviews.py  notification_settings.py  repositories.py  repository_analyses.py  repository_bindings.py  repository_metrics.py  tokens.py  users.py  webhook_logs.py
back/app/openai/: README.md  functions.py  openai.py  prompt.py
back/app/schema/: __init__.py  analysis.py  auth.py  commits.py  cookies.py  merge_requests.py  notifications.py  repositories.py
back/app/sdk/email/: __init__.py
back/app/sdk/openai/: README.md
back/app/service/: analysis.py  auth.py  commits.py  merge_requests.py  notifications.py  repositories.py
back/tests/: test_db_analysis.py  test_email.py  test_functions.py  test_gitlab_functin_call.py  test_openai.py  test_root_gl.py  testai.py
front/: .gitignore  Dockerfile  (+4 more)
(+24 files in other folders)
