[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "httpx>=0.28.1",
    "openai>=1.93.0",
    "pydantic-settings>=2.10.1",
    "pymysql>=1.1.1",
    "python-gitlab>=6.1.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]
